[package]
name = "best403unlocker-rs"
version = "0.1.4"
edition = "2021"
description = "Rust implementation of best403unlocker project to bypass 403"
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/403unlocker/best403unlocker-rs"
categories = ["command-line-utilities", "development-tools", "accessibility", "network-programming"]
keywords = ["403", "dns", "tools", "bypass-403", "bypass"]
include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]
authors = ["BrPrS"]
[package.metadata.deb]
maintainer = "BrPrS prbarkati@gmail.com"
license-file = ["LICENSE", "4"]
extended-description = "A tool to unlock 403 Forbidden errors"
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/best403unlocker-rs", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/best403unlocker/README", "644"],
    ["best403unlocker.conf", "etc/best403unlocker.conf", "644"],
]
conf-files = ["/etc/best403unlocker.conf"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.14"
reqwest = { version = "0.12.5", features = ["blocking", "stream"] }
tokio = { version = "1.38.0", features = ["macros"] }
futures-util = "0.3.30"
trust-dns-resolver = "0.23.2"
chrono = "0.4.38"
log = "0.4.22"
colog = "1.3.0"
